# legal_ml

./: .gitignore  README.md  docker-compose.yaml  dvc.yaml  finel_scheme.drawio  hello.py  pyproject.toml
data/interim/: .gitignore
data/processed/: .gitignore
data/raw/: .gitignore  questions.json.zst.dvc
notebooks/: 00_test.ipynb  01_bgi_analysis_9111.ipynb  02_bgi_embedding_visulisation.ipynb  03_bgi_test_sample.ipynb  04_bgi_rerank_texts.ipynb  05_bgi_create_dataset.ipynb  06_train_model.ipynb  analysis.ipynb  create_dataset.ipynb  create_train_test_data.ipynb  embedding_visulisation.ipynb  load_data_in_vector_bd.ipynb  mlflow.ipynb  preprocessing_9111.ipynb  rerank_texts.ipynb  test_model.ipynb  train_chat_model.ipynb  use_minmax.ipynb
src/: conf.py  convert_zst_to_perquet_9111_df.py
src/containers/: embeddings_model.py
src/data/: convert_zst_to_perquet_9111_df.py  load_data_in_vector_db.py  prepare_dataset_for_vectorization.py
src/features/: create_data_records.py  create_datasets.py  create_prompt.py  create_prompt_dataset.py  retrievers.py
src/models/: callback.py  find_retriver_count_train_model.py  train_model.py
src/pipeline/: 01_pipeline_convert_zst_to_parquet.py  03_pipeline_load_data_in_vector_db.py  04_pipeline_sample_records_from_collection.py  05_pipeline_create_data_records.py  06_pipeline_create_prompt.py  07_pipeline_best_retriver_train_model.py  pipeline_best_retriver_count_train_model.py  pipeline_convert_zst_to_parquet.py  pipeline_create_data_records.py  pipeline_create_prompt_dataset.py  pipeline_load_data_in_vector_db.py  pipeline_prepare_dataset_for_vectorization.py  pipeline_sample_records_from_collection.py  pipeline_train_model.py
unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
(+8 files in other folders)
