[project]
name = "legal-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "datasets>=3.2.0",
    "flagembedding>=1.3.4",
    "grpcio-tools>=1.70.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "mlflow>=2.20.1",
    "notebook>=7.3.2",
    "optuna>=4.2.0",
    "pandas>=2.2.3",
    "qdrant-client>=1.13.2",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
    "trl>=0.14.0",
    "unsloth>=2024.8",
]
