[project]
name = "legal-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bokeh>=3.6.3",
    "dvc>=3.59.0",
    "flagembedding>=1.3.4",
    "grpcio-tools==1.48.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "notebook>=7.3.2",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "qdrant-client>=1.13.2",
    "torch>=2.6.0",
    "unsloth[cu124-ampere-torch260]",
    "zstandard>=0.23.0",
]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
